docs/public/style.css
body {
  margin: 10px auto;
  max-width: 1000px;
  background-color: #e4e4e4;
}

main {
  max-width: 700px;
  padding: 10px;
  margin: 0 auto;
}

h1 {
  width: 700px;
}

p {
  max-width: 650px;
  font-size: 20px;
}

hr {
  max-width: 700px;
  margin-left: 0;
}

a {
  color: black;
  font-size: 20px;
}


/* NAVBAR */
nav {
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #333;
  width: 100%;
}

nav a {
  float: right;
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

nav a:hover {
  background-color: #111;
}

nav .active {
  background-color: #555;
}

#turtle {
  border: 3px solid #103f1d;
  width: 65px;
  height: 65px;
  background-color: #7bad18;
  margin: 16px;
}


h3 {
  margin: 0;
  padding: 0;
  font-size: 24px;
}

.project {
  border: 1px solid black;
  border-radius: 7px;
  margin: 10px;
  max-width: 350px;
  padding: 10px;
}

.project ul {
  display: flex;

  font-size: 16px;
  list-style: none;
}

.project ul li {
  margin: 5px;
  border: 1px solid white;
  padding: 4px;
}

.tags {
  max-width: 400px;
  padding: 6px;
  margin: 20px auto;
}

.tags button {
  margin: 2px;
  border-radius: 3px;

  font-size: 18px;
}

.project-link {
  display: inline-block;
  margin: 0 10px;
}

.project {
  padding: 10px;
  margin: 30px auto;
}

.icon {
  display: none;
}

@media screen and (max-width: 600px) {
  body {
    margin: 0;
    max-width: 1000px;
    background-color: #e4e4e4;
  }

  nav a:not(.active) {
    display: none;
  }

  nav a {
    float: left;
  }

  nav a.icon {
    display: block;
    float: right;
  }

  nav.responsive {
    position: relative;
  }

  nav.responsive a.icon {
    position: absolute;
    right: 0;
    top: 0;
  }

  nav.responsive a {
    float: none;
    display: block;
    text-align: left;
  }

}

#project-display {
  max-width: 700px;
  padding: 10px;
  margin: 0 auto; 
}

